fluxcd/base/showenv/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: showenv
  name: showenv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: showenv
  template:
    metadata:
      labels:
        app: showenv
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: showenv
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
        image: showenv:v0.1.0
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        resources:
          limits:
            memory: 100Mi
          requests:
            memory: 100Mi
